--- a/安装准备.md
+++ b/安装准备.md
@@ -9,6 +9,12 @@
 
 一般来说，一个项目会由多个开发人员协作完成，为了节省企业成本，公司不会给每个开发人员都配备一台服务器，而是让所有开发人员共用一个开发机，通过普通用户登录开发机进行开发。因此，为了模拟真实的企业开发环境，我们也通过一个普通用户的身份来进行项目的开发，创建方法如下:
 
+如果没有切换到`root`目录下, 则需要进行切换
+```shell
+su root
+```
+
+
 ```centos
 # useradd going # 创建 going 用户，通过 going 用户登录开发机进行开发
 # passwd going # 设置密码
@@ -20,5 +26,9 @@ passwd: all authentication tokens updated successfully.
 
 第二部, 添加sudoers
 
-我们知道更多的时候, 普通用户也要使用
+我们知道更多的时候, 普通用户也要使用到Root权限
+
+```
+# sed -i '/^root.*ALL=(ALL).*ALL/a\going\tALL=(ALL) \tALL' /etc/sudoers
+```
 
